--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -179,7 +179,7 @@
                             </div>
                             <div class="col-md-8">
                                 <p class="description">
-                                    After some text pre-processing (lowercasing, stopwords and punctuation removal, lemmatization with NLTK ), two models are built article's title + abastract
+                                    After some text pre-processing (lowercasing, stopwords and punctuation removal, lemmatization with NLTK ), two models are built on title + abstract
                                 </p>
                                 <ul>
                                     <li>
@@ -205,7 +205,7 @@
                                 <br />
                                 <br />
                                 <a href="http://scikit-learn.org" target="_blank">
-                                    <img class="image-clients" src="~/assets/img/sklearn.png" />
+                                    <img class="image-clients" src="~/assets/img/Sklearn.png" />
                                 </a>
                             </div>
                         </row>
